syntax = "proto3";

option csharp_namespace = "grpcservice.Protos";

// The greeting service definition.
service BlockSrv {
  // Sends a greeting
  rpc GetGenesis(EmptyRequest) returns (StringReply);
  rpc LastBlock(EmptyRequest)  returns (StringReply);
}

// The request message 

message EmptyRequest {
}

// The response message containing the greetings.
message StringReply {
  string message = 1;
}
